--- a/app/src/main/resources/app.properties
+++ b/app/src/main/resources/app.properties
@@ -3,3 +3,4 @@ example.javaagent.prop2=1
 example.javaagent.prop3=1000000
 example.javaagent.prop4=100.23
 example.javaagent.prop5=23.0902323
+example.javaagent.prop6=true
