--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -14,6 +14,6 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Premain-Class': 'example.javaagent.Agent'
+        attributes 'Premain-Class': 'example.javaagent.PropertyAgent'
     }
 }
