--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -7,8 +7,7 @@ sourceCompatibility = 1.8
 
 dependencies {
     compile project(":core")
-    compile 'net.bytebuddy:byte-buddy-agent:1.6.9'
-    compile 'net.bytebuddy:byte-buddy:1.6.9'
+    compile 'org.ow2.asm:asm:5.2'
     compile 'org.reflections:reflections:0.9.10'
 }
 
