--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -8,7 +8,7 @@ sourceCompatibility = 1.8
 dependencies {
     compile project(":core")
     compile 'org.ow2.asm:asm:5.2'
-    compile 'org.reflections:reflections:0.9.10'
+    compile 'org.ow2.asm:asm-tree:5.2'
 }
 
 jar {
